@@ -107,6 +107,10 @@
 !define gpg4win_pkg_sylpheed_claws @gpg4win_pkg_sylpheed_claws@
 !define gpg4win_pkg_sylpheed_claws_version @gpg4win_pkg_sylpheed_claws_version@
 
+@HAVE_PKG_CLAWS_MAIL@
+!define gpg4win_pkg_claws_mail @gpg4win_pkg_claws_mail@
+!define gpg4win_pkg_claws_mail_version @gpg4win_pkg_claws_mail_version@
+
 #@HAVE_PKG_EUDORAGPG@
 #!define gpg4win_pkg_eudoragpg @gpg4win_pkg_eudoragpg@
 #!define gpg4win_pkg_eudoragpg_version @gpg4win_pkg_eudoragpg_version@
